# counting_bot_indently

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  pyvenv.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml
cogs/: utils.py
