[tool.poetry]
name = "counting_bot_indently"
version = "1.0.0"
description = "Counting bot for the Indently Discord server!"
authors = ["Guanciottaman <113635544+guanciottaman@users.noreply.github.com>", "Wrichik Basu <56736644+WrichikBasu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
